testing/json_flex/json_token_codes.inc
    YYEMPTY = -2,
    YYEOF = 0,
    YYerror = 256,                 // error
    YYUNDEF = 257,                 // "invalid token"
    MULTILINECOMMENT = 258,        // MULTILINECOMMENT
    JSONSTRING = 259,              // "string literal"
    JSONNUMBER = 260,              // JSONNUMBER
    ID = 261,                      // ID
    KW_NULL = 262,                 // KW_NULL
    TRUE = 263,                    // TRUE
    FALSE = 264,                   // FALSE
